fix account receivables scss

--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -10,7 +10,7 @@
 	    <div class='item-container'>
 	        <div class='container'>
 	            <div class='cell'>
-	            	<div class='container'><div class='cell header bold center title'>Total Receivables : {{getTotalReceivable()}} ₱</div></div>
+	            	<div class='container'><div class='cell header bold center title'>Total Receivables : {{getTotalReceivable()}}</div></div>
 	            </div>
 	        </div>
 	    </div>
@@ -19,8 +19,10 @@
 	 <div *ngFor='#FilteredSearch of vSearchedList'>
 		<div class='item-container'>
 		    <div class='container'>
-		    	<div class='cell icon'>
-		            	<div class='src'>{{FilteredSearch.source}}</div>
+		    	<div class='cell icon' [ngClass]="{'sulu': (FilteredSearch.source === 'BCP') , 'serenade': (FilteredSearch.source === 'SELF')}">
+		            	<div class='src'>
+		            		{{FilteredSearch.source}}
+		            	</div>
 		            </div>
 		        <div class='cell'>
 	                <div class='container' id ='accSeq' *ngIf='FilteredSearch.sequence'><div class='cell left grey'># Route {{FilteredSearch.sequence}}</div></div>
@@ -29,7 +31,7 @@
 		        </div>
 		        <div class='cell'>
 	                <div class='container'><div class='cell right'></div></div>
-	                <div class='container' id ='accAmount'><div class='cell right'>{{FilteredSearch.amount | number}} ₱</div></div>
+	                <div class='container' id ='accAmount'><div class='cell right'>{{FilteredSearch.amount}}</div></div>
 	                <div class='container'><div class='cell right'></div></div> 
 		        </div>
 		            <div class='cell ws'></div> 
