--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -84,16 +84,22 @@
                 height: 30px;
                 position: center;
                 text-align: center;
-                background-color: #00FF00;
-
+                color: #006600;
+                
                 .src{
                     width: 30px;
                     position: center;
                     transform: rotate(-90deg);
                     text-align: center; 
                     font-size: 12px;
-                    color: #006600;
                     font-weight: bold;
+                } 
+                &.sulu{
+                        background-color: $sulu;
+
+                }
+                &.serenade{
+                    background-color: $serenade;
                 }
             }
             &.ws{
