--- a/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
+++ b/src/app/app/basic-call-procedure/components/sales-order-payment.component.html
@@ -178,9 +178,14 @@
             	</div>
             </div>
         </div>
+
+        <div class="no-divider">
+	        <div class= "button" (click)="gotoBCPActivityStep()">
+	            <div class="button-identifier">DONE</div>
+	        </div>      
+	    </div>
     </div>
 
-
-
+    
 
 </div>
