--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -106,6 +106,7 @@ LIST VIEW - BUTTON
         padding-top: 2vw;
         margin-left: 15%;
         margin-top:4%;
+        margin-bottom:4%;
         background-color: $apple;
         border-radius: 2vw;
         .button-identifier {
