targets actuals back button, delete bcp offer

--- a/src/app/app/basic-call-procedure/components/call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/call-preparation.component.html
@@ -1,4 +1,25 @@
     <div class="container-body">
+    	<div class="item-container">
+	        <div class="container">
+	        	<div class='cell'>
+	        		<div class='container'><div class='cell left'></div></div>
+			    </div>
+	        	<div class='cell'>
+	        		<div class='container'><div class='cell right green'>Route #2</div></div>
+			    </div>
+			    <div class='cell icon'>
+			</div>
+	    </div>
+    	<div class="item-container">
+	        <div class="container">
+	        	<div class='cell logo'><div class="profpic pink">R</div></div>
+	        	<div class='cell'>
+	        		<div class='container'>
+	        			<div class='cell content title bold green'>Rose Cell</div>
+	        		</div>
+			    </div>
+			</div>
+	    </div>
         <div class="item-container" (click)="subProfileMenuShow()">
 			<div class="container">
 				<div class='cell'>
