--- a/src/app/app/basic-call-procedure/components/call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/call-preparation.component.html
@@ -1,21 +1,22 @@
     <div class="container-body">
+    <div *ngFor="#each of getRetailerDetails()">
     	<div class="item-container">
 	        <div class="container">
 	        	<div class='cell'>
 	        		<div class='container'><div class='cell left'></div></div>
 			    </div>
 	        	<div class='cell'>
-	        		<div class='container'><div class='cell right green'>Route #2</div></div>
+	        		<div class='container'><div class='cell right green'>Route #{{vSelectedRetailSeq}}</div></div>
 			    </div>
 			    <div class='cell icon'>
 			</div>
 	    </div>
     	<div class="item-container">
 	        <div class="container">
-	        	<div class='cell logo'><div class="profpic pink">R</div></div>
+	        	<div class='cell logo'><div class="profpic pink">{{each.first_car}}</div></div>
 	        	<div class='cell'>
 	        		<div class='container'>
-	        			<div class='cell content title bold green'>Rose Cell</div>
+	        			<div class='cell content title bold green'>{{each.retailer_name}}</div>
 	        		</div>
 			    </div>
 			</div>
@@ -28,7 +29,7 @@
 			    <div class='cell icon arrow-down' [ngClass]="{selected: vProfileMenuShow}"></div>
 			</div>
 		</div>
-		<div *ngFor="#each of getRetailerDetails()">
+		
 			<div class="item-container sub" *ngIf="vProfileMenuShow">
 				<div class="container border">
 					<div class='cell'>
