--- a/src/app/app/basic-call-procedure/components/unserved-order.component.html
+++ b/src/app/app/basic-call-procedure/components/unserved-order.component.html
@@ -18,16 +18,23 @@
             </div>
                 <div class='cell icon'></div>
         </div>
-
-        <div class="item-container">
-            <div class="container">
-                <div class='cell'>
-                    <div class='container'><div class='cell single title'>Rose Cell</div></div>
-                </div>
-                <div class='cell'>
-                    <div class='container'><div class='cell left italic'>(99999900003)</div></div>
-                </div>
+    </div>
+    <div class="item-container">
+        <div class='container'>
+            <div class='cell'>
+                <div class='container'><div class='cell single title'>Add Unserved Order</div></div>
             </div>
+            <div class='cell icon add'></div>
+        </div>
+    </div>
+    <div class='double-divider'>
+        <div class='button' id='skip'>
+            <div class='button-identifier'>SKIP</div>
+        </div>
+    </div>
+    <div class='double-divider' id='confirm'>
+        <div class='button' (click)="gotoBCPActivityStep()">
+            <div class='button-identifier'>DONE</div>
         </div>
     </div>
 </div>    
