--- a/src/app/app/my-transaction/components/hc-accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/hc-accounts-receivables.component.html
@@ -5,17 +5,20 @@
 			<input type="text" #listFilter (keyup)="onKey(listFilter.value)" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN" />
 		</div>	
 	</div>
-</div>
-<div class="container-body">
-    <div class="item-container">
-        <div class='container'>
-            <div class='cell'>
-            	<div class='container'><div class='cell header bold center title'>Total Receivables : 12,400.00 ₱</div></div>
-            </div>
-        </div>
-    </div>
+	<div class="container-body">
+	    <div class="item-container">
+	        <div class='container'>
+	            <div class='cell'>
+	            	<div class='container'><div class='cell header bold center title'>Total Receivables : 12,400.00 ₱</div></div>
+	            </div>
+	        </div>
+	    </div>
+	</div>
 	<div class="item-container">
 	    <div class="container">
+	    	<div class='cell icon sulu'>
+            	<div class='src'>BCP</div>
+            </div>
 	        <div class='cell'>
                 <div class='container' id ="accSeq"><div class='cell left green'># Route 2</div></div>
                 <div class='container' id ="accRetName"><div class='cell left'>Bird cell</div></div>
@@ -26,11 +29,14 @@
                 <div class='container' id ="accAmount"><div class='cell right'>3,000.00 ₱</div></div>
                 <div class='container'><div class='cell right'></div></div>
 	        </div>
-	            <div class='cell icon'></div>
+	            <div class='cell ws'></div>
 	    </div>
 	</div>
 	<div class="item-container">
 	    <div class="container">
+	    	<div class='cell icon serenade'>
+            	<div class='src'>SELF</div>
+            </div>
 	        <div class='cell'>
                 <div class='container' id ="accSeq"><div class='cell left green'># Route 3</div></div>
                 <div class='container' id ="accRetName"><div class='cell left'>Rose cell</div></div>
@@ -41,11 +47,14 @@
                 <div class='container' id ="accAmount"><div class='cell right'>2,000.00 ₱</div></div>
                 <div class='container'><div class='cell right'></div></div>
 	        </div>
-	            <div class='cell icon'></div>
+	            <div class='cell ws'></div>
 	    </div>
 	</div>
 	<div class="item-container">
 	    <div class="container">
+	    	<div class='cell icon serenade'>
+            	<div class='src'>SELF</div>
+            </div>
 	        <div class='cell'>
                 <div class='container' id ="accRetName"><div class='cell left'>ABC cell</div></div>
                 <div class='container' id ="accRetMin"><div class='cell left italic'>99999900004</div></div>
@@ -54,11 +63,14 @@
                 <div class='container' id ="accAmount"><div class='cell right'>1,400.00 ₱</div></div>
                 <div class='container'><div class='cell right'></div></div>
 	        </div>
-	            <div class='cell icon'></div>
+	            <div class='cell ws'></div>
 	    </div>
 	</div>
 	<div class="item-container">
 	    <div class="container">
+	    	<div class='cell icon serenade'>
+            	<div class='src'>SELF</div>
+            </div>
 	        <div class='cell'>
                 <div class='container' id ="accRetName"><div class='cell left'>Lova cell</div></div>
                 <div class='container' id ="accRetMin"><div class='cell left italic'>99999900005</div></div>
@@ -67,11 +79,14 @@
                 <div class='container' id ="accAmount"><div class='cell right'>6,000.00 ₱</div></div>
                 <div class='container'><div class='cell right'></div></div>
 	        </div>
-	            <div class='cell icon'></div>
+	            <div class='cell ws'></div>
 	    </div>
 	</div>
 	<div class="item-container">
 	    <div class="container">
+	    	<div class='cell icon sulu'>
+            	<div class='src'>BCP</div>
+            </div>
 	        <div class='cell'>
                 <div class='container' id ="accRetName"><div class='cell left'>Mama cell</div></div>
                 <div class='container' id ="accRetMin"><div class='cell left italic'>99999900006</div></div>
@@ -80,11 +95,14 @@
                 <div class='container' id ="accAmount"><div class='cell right'>7,000.00 ₱</div></div>
                 <div class='container'><div class='cell right'></div></div>
 	        </div>
-	            <div class='cell icon'></div>
+	            <div class='cell ws'></div>
 	    </div>
 	</div>
-				<div class="item-container">
+	<div class="item-container">
 	    <div class="container">
+	    	<div class='cell icon sulu'>
+            	<div class='src'>BCP</div>
+            </div>
 	        <div class='cell'>
                 <div class='container' id ="accRetName"><div class='cell left'>Nano cell</div></div>
                 <div class='container' id ="accRetMin"><div class='cell left italic'>99999900007</div></div>
@@ -93,7 +111,7 @@
                 <div class='container' id ="accAmount"><div class='cell right'>4,500.00 ₱</div></div>
                 <div class='container'><div class='cell right'></div></div>
 	        </div>
-	            <div class='cell icon'></div>
+	            <div class='cell ws'></div>
 	    </div>
 	</div>
 </div>
