--- a/src/app/app/basic-call-procedure/components/call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/call-preparation.component.html
@@ -1,4 +1,4 @@
-    <div class="container-body">
+<div class="container-body">
     <div *ngFor="#each of getRetailerDetails()">
     	<div class="item-container">
 	        <div class="container">
@@ -8,10 +8,8 @@
 	        	<div class='cell'>
 	        		<div class='container'><div class='cell right green'>Route #{{vSelectedRetailSeq}}</div></div>
 			    </div>
-			    <div class='cell icon'>
+			    <div class='cell icon'></div>
 			</div>
-	    </div>
-    	<div class="item-container">
 	        <div class="container">
 	        	<div class='cell logo'><div class="profpic pink">{{each.first_car}}</div></div>
 	        	<div class='cell'>
@@ -117,14 +115,14 @@
 				</div>
 			</div>
 
-	        <div class="item-container" (click)="subCollectionMenuShow()">
-				<div class="container">
-					<div class='cell'>
-				        <div class='container'><div class='cell title single green'>Collection</div></div>
-				    </div>
-				    <div class='cell icon arrow-down' [ngClass]="{selected: vCollectionMenuShow}"></div>
-				</div>
+        <div class="item-container" (click)="subCollectionMenuShow()">
+			<div class="container">
+				<div class='cell'>
+			        <div class='container'><div class='cell title single green'>Collection</div></div>
+			    </div>
+			    <div class='cell icon arrow-down' [ngClass]="{selected: vCollectionMenuShow}"></div>
 			</div>
+		</div>
 			<div class="item-container sub" *ngIf="vCollectionMenuShow">
 				<div class="container">
 					<div class='cell'>
@@ -146,14 +144,14 @@
 				</div>
 			</div>
 
-	        <div class="item-container" (click)="subLoadMenuShow()">
-				<div class="container">
-					<div class='cell'>
-				        <div class='container'><div class='cell title single green'>Load Wallet</div></div>
-				    </div>
-				    <div class='cell icon arrow-down' [ngClass]="{selected: vLoadMenuShow}"></div>
-				</div>
+        <div class="item-container" (click)="subLoadMenuShow()">
+			<div class="container">
+				<div class='cell'>
+			        <div class='container'><div class='cell title single green'>Load Wallet</div></div>
+			    </div>
+			    <div class='cell icon arrow-down' [ngClass]="{selected: vLoadMenuShow}"></div>
 			</div>
+		</div>
 			<div class="item-container sub" *ngIf="vLoadMenuShow">
 				<div class="container">
 					<div class='cell'>
@@ -181,14 +179,14 @@
 				</div>
 			</div>
 
-	        <div class="item-container" (click)="subPhysicalMenuShow()">
-				<div class="container">
-					<div class='cell'>
-				        <div class='container'><div class='cell title single green'>Physical Inventory</div></div>
-				    </div>
-				    <div class='cell icon arrow-down' [ngClass]="{selected: vPhysicalMenuShow}"></div>
-				</div>
+        <div class="item-container" (click)="subPhysicalMenuShow()">
+			<div class="container">
+				<div class='cell'>
+			        <div class='container'><div class='cell title single green'>Physical Inventory</div></div>
+			    </div>
+			    <div class='cell icon arrow-down' [ngClass]="{selected: vPhysicalMenuShow}"></div>
 			</div>
+		</div>
 			<div class="item-container sub" *ngIf="vPhysicalMenuShow">
 				<div class="container">
 					<div class='cell'>
@@ -214,10 +212,10 @@
 				</div>
 			</div>
 
-		    <div class="no-divider">
-		        <div class= "button" (click)="gotoBCPActivityStep()">
-		            <div class="button-identifier">START</div>
-		        </div>      
-		    </div>
+	    <div class="no-divider">
+	        <div class= "button" (click)="gotoBCPActivityStep()">
+	            <div class="button-identifier">START</div>
+	        </div>      
 	    </div>
     </div>
+</div>
