--- a/src/app/scss/_login.scss
+++ b/src/app/scss/_login.scss
@@ -29,12 +29,12 @@ $container-login-height: 100%;
 		color:    #FFF;
 	}
 	.outer-box {
-		max-width : 75vw;
+		max-width : 80%;
 		margin: 20vw auto -3vw;
 		.header {
 			color: #FFF;
 			font-size: 10vw;
-			line-height: 0vw;
+			line-height: 5vw;
 			margin-bottom: 20vw;
 			text-align: center;
 		}
@@ -89,6 +89,7 @@ $container-login-height: 100%;
 					color: #FFF;
 					text-decoration: underline;
 					cursor: pointer;
+					font-size: 4vw;
 				}
 			}
 		}
@@ -121,9 +122,10 @@ $container-login-height: 100%;
         no-repeat;
         background-position-x: center;
         background-position-y: center;
+        background-size: 30vw;
         z-index: 90;
 		position: fixed;
-		padding-top: 50vw;
+		padding-top: 73vw;
 
 	}
 }
