--- a/src/app/app/basic-call-procedure/components/bcp-activity-step.component.html
+++ b/src/app/app/basic-call-procedure/components/bcp-activity-step.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="right">
                 <div class="title">Collection</div>
-                <div class="body">10:00 - 13:00</div>
+                <div class="body" *ngIf="vCollectionFlag">10:00 - 13:00</div>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             </div>
             <div class="right">
                 <div class="title">Offers</div>
-                <div class="body">10:00 - 13:00</div>
+                <div class="body" *ngIf="vOffersFlag">10:00 - 13:00</div>
             </div>
         </div>
 
@@ -42,7 +42,7 @@
             </div>
             <div class="right">
                 <div class="title">Sales Order</div>
-                <div class="body">10:00 - 13:00</div>
+                <div class="body" *ngIf="vSalesFlag">10:00 - 13:00</div>
             </div>
         </div>
   </div>
