--- a/src/app/app/my-transaction/components/md-targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/md-targets-actuals.component.html
@@ -17,7 +17,7 @@
 	<div *ngIf="vDayShow">
 		<div class="item-container-md-ta">
 	        <div class="container border">
-	        	<div class='cell category-icon targets-airtime'></div>
+	        	<div class='cell category-icon targets-sim'></div>
 	            <div class='cell'>
 	                <div class='container'><div class='cell category-text green'>Airtime</div></div>
 	            </div>
@@ -140,7 +140,7 @@
 	<div *ngIf="vWeekShow">
 		<div class="item-container-md-ta">
 	        <div class="container border">
-	        	<div class='cell category-icon targets-airtime'></div>
+	        	<div class='cell category-icon targets-sim'></div>
 	            <div class='cell'>
 	                <div class='container'><div class='cell category-text green'>Airtime</div></div>
 	            </div>
@@ -295,7 +295,7 @@
 	<div *ngIf="vMonthShow">
 		<div class="item-container-md-ta">
 	        <div class="container border">
-	        	<div class='cell category-icon targets-airtime'></div>
+	        	<div class='cell category-icon targets-sim'></div>
 	            <div class='cell'>
 	                <div class='container'><div class='cell category-text green'>Airtime</div></div>
 	            </div>
