refactor font on layout.scss

--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -95,3 +95,7 @@ $overlayColor: #fffde8;
 $backColor: #2f3439;
 $radical-red: #F03566;
 $sugar-cane: #EEEEEC;
+
+// font
+$font-style: 'HelveticaNeue-Light';
+$font-url: '../fonts/HelveticaNeue-Light.ttf';
