--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -1,18 +1,13 @@
 @font-face {
-  font-family: 'HelveticaNeue-Light';
+  font-family: $font-style;
   font-style: normal;
-  font-weight: lighter;
-  src: local('HelveticaNeue-Light'), url('../fonts/HelveticaNeue-Light.ttf') format('truetype');
+  src: local($font-style), url($font-url) format('truetype');
 }
 
 body{
-	font-family: 'HelveticaNeue-Light';
+	font-family: $font-style;
 	overflow-x: hidden;
 	position: relative;
-	// font-family: 'Roboto', sans-serif;
-	// font-family: Futura, Arial, sans-serif;
-	//font-family: 'Calibri', sans-serif;
-	// font-family: Helvetica, sans-serif;
 	background-color: #FFF;
 	margin: 0;
 	padding: 0;
