--- a/src/app/app/shared/components/home.component.html
+++ b/src/app/app/shared/components/home.component.html
@@ -12,10 +12,26 @@
 </div>
 <div class="home-container">
     <div class="home-item-box">
+        <div class="home-table" (click)="goToMyDashboard()">
+            <div class='cell icon target'></div>
+            <div class='cell'>
+                <div class="home-table">
+                    <div class='cell single'> 
+                        My Dashboard
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="separator"></div>
+
         <div class="home-table" (click)="goToTargetsActuals()">
             <div class='cell icon target'></div>
             <div class='cell'>
-                <div class="home-table"><div class='cell single'>Targets &amp; Actuals</div></div>
+                <div class="home-table">
+                    <div class='cell single'>
+                        Targets &amp; Actuals
+                    </div>
+                </div>
             </div>
         </div>
         <div class="separator"></div>
@@ -23,7 +39,11 @@
         <div class="home-table" (click)="goToInventory()">
             <div class='cell icon inventory'></div>
             <div class='cell'>
-                <div class="home-table"><div class='cell single'>Inventory</div></div>
+                <div class="home-table">
+                    <div class='cell single'>
+                        Inventory
+                    </div>
+                </div>
             </div>
         </div>
         <div class="separator"></div>
@@ -31,7 +51,11 @@
         <div class="home-table" (click)="goToBasicCallProcedure()">
             <div class='cell icon bcp'></div>
             <div class='cell'>
-                <div class="home-table"><div class='cell single'>Basic Call Procedure</div></div>
+                <div class="home-table">
+                    <div class='cell single'>
+                        Basic Call Procedure
+                    </div>
+                </div>
             </div>
         </div>
         <div class="separator"></div>
@@ -39,7 +63,11 @@
         <div class="home-table" (click)="goToRemittance()">
             <div class='cell icon remittance'></div>
             <div class='cell'>
-                <div class="home-table"><div class='cell single'>Remittance</div></div>
+                <div class="home-table">
+                    <div class='cell single'>
+                        Remittance
+                    </div>
+                </div>
             </div>
         </div>
         <div class="separator"></div>
@@ -47,7 +75,11 @@
         <div class="home-table" (click)="goToStockReturn()">
             <div class='cell icon stock-return'></div>
             <div class='cell'>
-                <div class="home-table"><div class='cell single'>Stock Return</div></div>
+                <div class="home-table">
+                    <div class='cell single'>
+                        Stock Return
+                    </div>
+                </div>
             </div>
         </div>
         <div class="separator"></div>
@@ -55,7 +87,11 @@
         <div class="home-table" (click)="goToLogout()">
             <div class='cell icon logout'></div>
             <div class='cell'>
-                <div class="home-table"><div class='cell single'>Logout</div></div>
+                <div class="home-table">
+                    <div class='cell single'>
+                        Logout
+                    </div>
+                </div>
             </div>
         </div>
         <div class="separator"></div>
