--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -14,4 +14,10 @@ body{
 	height: 100%;
 	width: 100%;
 	// overflow: hidden;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
