added outlet type on call-preparation

--- a/src/app/app/basic-call-procedure/components/call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/call-preparation.component.html
@@ -38,6 +38,13 @@
 				</div>
 				<div class="container border">
 					<div class='cell'>
+				        <div class='container'><div class='cell single sub-cell grey'>Outlet Type</div></div>
+				        <div class='container'><div class='cell single sub-cell'>{{each.outlet_type}}</div></div>
+				    </div>
+				    <div class='cell icon'></div>
+				</div>
+				<div class="container border">
+					<div class='cell'>
 				        <div class='container'><div class='cell single sub-cell grey'>Civil Status</div></div>
 				        <div class='container'><div class='cell single sub-cell'>{{each.civil_status}}</div></div>
 				    </div>
