--- a/src/app/app/basic-call-procedure/components/hc-call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-call-preparation.component.html
@@ -36,6 +36,13 @@
 			</div>
 			<div class="container border">
 				<div class='cell'>
+			        <div class='container'><div class='cell single sub-cell grey'>Outlet Type</div></div>
+			        <div class='container'><div class='cell single sub-cell'>Gallery</div></div>
+			    </div>
+			    <div class='cell icon'></div>
+			</div>
+			<div class="container border">
+				<div class='cell'>
 			        <div class='container'><div class='cell single sub-cell grey'>Civil Status</div></div>
 			        <div class='container'><div class='cell single sub-cell'>Married</div></div>
 			    </div>
