rapi2 global.scss

--- a/src/app/app/my-transaction/components/hc-accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/hc-accounts-receivables.component.html
@@ -5,15 +5,17 @@
 			<input type="text" #listFilter (keyup)="onKey(listFilter.value)" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN" />
 		</div>	
 	</div>
-	<div class="container-body">
-	    <div class="item-container">
-	        <div class='container'>
-	            <div class='cell'>
-	            	<div class='container'><div class='cell header bold center title'>Total Receivables : 12,400.00 ₱</div></div>
-	            </div>
-	        </div>
-	    </div>
-	</div>
+    <div class="item-container">
+        <div class='container'>
+            <div class='cell'>
+            	<div class='container'><div class='cell bold left title'>Total Receivables :</div></div>
+            </div>
+            <div class='cell'>
+            	<div class='container'><div class='cell bold right title'>12,400.00 ₱</div></div>
+            </div>
+            <div class='cell ws'></div>
+        </div>
+    </div>
 	<div class="item-container">
 	    <div class="container">
 	    	<div class='cell icon sulu'>
