--- a/src/app/app/my-transaction/components/hc-retailer-route.component.html
+++ b/src/app/app/my-transaction/components/hc-retailer-route.component.html
@@ -7,87 +7,78 @@
 			</select>
 		</div>	
 	</div>
-	<!--
-	<div class="item-container">
-        <div class="item-identifier">
-            <div class="item-title">
-            	<div>Mission for: {{vSelectedDate | date:'MMM, dd yyyy'}}</div>
-           </div>
-        </div>
-    </div>
-	-->
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic pink">G</div></div>
+        	<div class='cell width-20 padding-left-3'><div class="profpic pink">G</div></div>
         	<div class='cell'>
         		<div class='container'>
-        			<div class='cell content bold green'>#1</div>
+        			<div class='cell width-80 padding-left-3 bold green'>#1</div>
         		</div>
 		        <div class='container'>
-	        		<div class='cell content bold'>Gloria Cell</div>
+	        		<div class='cell width-80 padding-left-3 bold'>Gloria Cell</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Gloria Laura Ang</div>
+		        	<div class='cell width-80 padding-left-3'>Gloria Laura Ang</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Barangka Dr. Mandaluyong</div>
+		        	<div class='cell width-80 padding-left-3'>Barangka Dr. Mandaluyong</div>
 		    	</div>
 		    </div>
 		</div>
     </div>
      <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic purple">R</div></div>
+        	<div class='cell width-20 padding-left-3'><div class="profpic purple">R</div></div>
         	<div class='cell'>
         		<div class='container'>
-        			<div class='cell content bold green'>#2</div>
+        			<div class='cell width-80 padding-left-3 bold green'>#2</div>
         		</div>
 		        <div class='container'>
-	        		<div class='cell content bold'>Rose Cell</div>
+	        		<div class='cell width-80 padding-left-3 bold'>Rose Cell</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Rose May Shu</div>
+		        	<div class='cell width-80 padding-left-3'>Rose May Shu</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Maduluyong 10 Road</div>
+		        	<div class='cell width-80 padding-left-3'>Maduluyong 10 Road</div>
 		    	</div>
 		    </div>
 		</div>
     </div>
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic pink">B</div></div>
+        	<div class='cell width-20 padding-left-3'><div class="profpic pink">B</div></div>
         	<div class='cell'>
         		<div class='container'>
-        			<div class='cell content bold green'>#3</div>
+        			<div class='cell width-80 padding-left-3 bold green'>#3</div>
         		</div>
 		        <div class='container'>
-	        		<div class='cell content bold'>Bird Cell</div>
+	        		<div class='cell width-80 padding-left-3 bold'>Bird Cell</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>George Stephen Jo</div>
+		        	<div class='cell width-80 padding-left-3'>George Stephen Jo</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Matalang 56 Barangka</div>
+		        	<div class='cell width-80 padding-left-3'>Matalang 56 Barangka</div>
 		    	</div>
 		    </div>
 		</div>
     </div>
     <div class="item-container" id='each-retailer'>
         <div class="container">
-        	<div class='cell logo'><div class="profpic purple">L</div></div>
+        	<div class='cell width-20 padding-left-3'><div class="profpic purple">L</div></div>
         	<div class='cell'>
         		<div class='container'>
-        			<div class='cell content bold green'>#4</div>
+        			<div class='cell width-80 padding-left-3 bold green'>#4</div>
         		</div>
 		        <div class='container'>
-	        		<div class='cell content bold'>Love Cell</div>
+	        		<div class='cell width-80 padding-left-3 bold'>Love Cell</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Lovato</div>
+		        	<div class='cell width-80 padding-left-3'>Lovato</div>
 		        </div>
 		        <div class='container'>
-		        	<div class='cell content'>Matalang 78 Barangka</div>
+		        	<div class='cell width-80 padding-left-3'>Matalang 78 Barangka</div>
 		    	</div>
 		    </div>
 		</div>
