--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -14,27 +14,6 @@
 </a>
 
 <div class="inventory">
-	<div class="filter-container load" *ngIf="getFilter().filterInventoryLoad && vLoadShow">
-		<div class="filter-input input">
-			<input type="text" placeholder="Enter Brand, Category, or Sub Category"/>
-		</div>
-		<div class="filter-label">Brand</div>
-		<div class="filter-dropdown">
-			<select name="cars">
-				<option value="volvo">SMART</option>
-				<option value="saab">SUN</option>
-			</select>
-		</div>
-		<div class="filter-label">Sub Category</div>
-		<div class="filter-dropdown">
-			<select name="cars">
-				<option value="volvo">Smart SIM</option>
-				<option value="saab">TNT CTC/TL</option>
-				<option value="fiat">Regular Cards</option>
-				<option value="audi">Smart CTC/TL</option>
-			</select>
-		</div>
-	</div>
 
 	<div class="filter-container physical" *ngIf="getFilter().filterInventoryPhysical && vPhysicalShow">
 		<div class="filter-input">
@@ -71,105 +50,97 @@
 
 <div class="container-body">
 	<div *ngIf="vLoadShow">
-		<div class="item-container">
-			<div class="item-notification">LOAD AS OF 04/12/2016 10.00 AM</div>
-		</div>
-
 		<div>
 			<div class="item-container" (click)="subLoadMenuShow(i)">
 				<div class="container">
-					<div class='cell icon inventory-load'></div>
+					<div class='cell width-10 inventory-load'></div>
 					<div class='cell'>
-				        <div class='container'><div class='cell content bold' [ngClass]="{title: vSubLoadMenuShow[i]}">Smartload</div></div>
+				        <div class='container'><div class='cell width-80 padding-left-3 bold' [ngClass]="{title: vSubLoadMenuShow[i]}">Smartload</div></div>
 				        <div class='container' *ngIf="!vSubLoadMenuShow[i]">
 				        	<div class='cell'>
 				        		<div class="container">
 									<div class='cell'>
-								        <div class='container'><div class='cell left2'>Ending Balance</div></div>
+								        <div class='container'><div class='cell width-40 padding-left-3'>Ending Balance</div></div>
 								    </div>
 									<div class='cell'>
-								        <div class='container'><div class='cell right2 bold'>700</div></div>
+								        <div class='container'><div class='cell width-40 padding-right-3 align-right bold'>700</div></div>
 								    </div>
 								</div>
 							</div>
 						</div>
 				    </div>
-				    <div class='cell icon arrow-down' [ngClass]="{selected: vSubLoadMenuShow[i]}"></div>
+				    <div class='cell width-10 arrow-down' [ngClass]="{selected: vSubLoadMenuShow[i]}"></div>
 				</div>
 			</div>
 
 			<div class="item-container sub" *ngIf="vSubLoadMenuShow[i]">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell left bold'>Total Inventory</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Delivery</div></div>
-				        <div class='container'><div class='cell left bold'>Sales</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Sold</div></div>
-				        <div class='container'><div class='cell left bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Total Inventory</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>Delivery</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Sales</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>Sold</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell right bold'>600</div></div>
-				        <div class='container'><div class='cell right'>100</div></div>
-				        <div class='container'><div class='cell right'>100</div></div>
-				        <div class='container'><div class='cell right bold'>100</div></div>
-				        <div class='container'><div class='cell right'>100</div></div>
-				        <div class='container'><div class='cell right bold'>700</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>600</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>700</div></div>
 				    </div>
-				    <div class='cell icon'></div>
+				    <div class='cell width-10'></div>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div *ngIf="vPhysicalShow">
-		<div class="item-container">
-			<div class="item-notification">PHYSICAL AS OF 04/12/2016 10.00 AM</div>
-		</div>
-
 		<div>
 			<div class="item-container" (click)="subPhysicalMenuShow(i)">
 				<div class="container">
-					<div class='cell icon inventory-physical'></div>
+					<div class='cell width-10 inventory-physical'></div>
 					<div class='cell'>
-				        <div class='container'><div class='cell content bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">SKU1</div></div>
+				        <div class='container'><div class='cell width-80 padding-left-3 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">SKU1</div></div>
 				        <div class='container' *ngIf="!vSubPhysicalMenuShow[i]">
 				        	<div class='cell'>
 				        		<div class="container">
 									<div class='cell'>
-								        <div class='container'><div class='cell left2'>Ending Balance</div></div>
+								        <div class='container'><div class='cell width-40 padding-left-3'>Ending Balance</div></div>
 								    </div>
 									<div class='cell'>
-								        <div class='container'><div class='cell right2 bold'>1,300</div></div>
+								        <div class='container'><div class='cell width-40 padding-right-3 align-right bold'>1,300</div></div>
 								    </div>
 								</div>
 							</div>
 						</div>
 				    </div>
-				    <div class='cell icon arrow-down' [ngClass]="{selected: vSubPhysicalMenuShow[i]}"></div>
+				    <div class='cell width-10 arrow-down' [ngClass]="{selected: vSubPhysicalMenuShow[i]}"></div>
 				</div>
 			</div>
 			<div class="item-container sub" *ngIf="vSubPhysicalMenuShow[i]">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell left bold'>Total Inventory</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell left sub-cell'>New Delivery</div></div>
-				        <div class='container'><div class='cell left bold'>Sales &amp; Transfer Back</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Sold</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Transfer Back</div></div>
-				        <div class='container'><div class='cell left bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Total Inventory</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>New Delivery</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Sales &amp; Transfer Back</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>Sold</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-6'>Transfer Back</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell right bold'>1,500</div></div>
-				        <div class='container'><div class='cell right'>1,500</div></div>
-				        <div class='container'><div class='cell right'>0</div></div>
-				        <div class='container'><div class='cell right bold'>200</div></div>
-				        <div class='container'><div class='cell right'>100</div></div>
-				        <div class='container'><div class='cell right'>100</div></div>
-				        <div class='container'><div class='cell right bold'>1,300</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>1,500</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>1,500</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>0</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>200</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>1,300</div></div>
 				    </div>
-				    <div class='cell icon'></div>
+				    <div class='cell width-10'></div>
 				</div>
 			</div>
 		</div>
@@ -178,35 +149,35 @@
 			<div class="item-container" (click)="subPhysicalMenuShow(i)">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell left bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">{{vProduct.productName}}</div></div>
-				        <div class='container'><div class='cell left grey' *ngIf="!vSubPhysicalMenuShow[i]">Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">{{vProduct.productName}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 grey' *ngIf="!vSubPhysicalMenuShow[i]">Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell right'></div></div>
-				        <div class='container'><div class='cell right bold' *ngIf="!vSubPhysicalMenuShow[i]">{{vProduct.endingBalance}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'></div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold' *ngIf="!vSubPhysicalMenuShow[i]">{{vProduct.endingBalance}}</div></div>
 				    </div>
-				    <div class='cell icon arrow-down' [ngClass]="{selected: vSubPhysicalMenuShow[i]}"></div>
+				    <div class='cell width-10 arrow-down' [ngClass]="{selected: vSubPhysicalMenuShow[i]}"></div>
 				</div>
 			</div>
 
 			<div class="item-container sub" *ngIf="vSubPhysicalMenuShow[i]">
 				<div class="container">
 					<div class='cell'>
-				        <div class='container'><div class='cell left bold'>Total Inventory</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Delivery</div></div>
-				        <div class='container'><div class='cell left bold'>Sales</div></div>
-				        <div class='container'><div class='cell left sub-cell'>Sold</div></div>				        <div class='container'><div class='cell left bold'>Ending Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Total Inventory</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 sub-cell'>Beginning Balance</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 sub-cell'>Delivery</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Sales</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-3 sub-cell'>Sold</div></div>				        <div class='container'><div class='cell width-45 padding-left-3 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell right bold'>600</div></div>
-				        <div class='container'><div class='cell right'>{{vProduct.beginningBalance}}</div></div>
-				        <div class='container'><div class='cell right'>{{vProduct.newDelivery}}</div></div>
-				        <div class='container'><div class='cell right bold'>100</div></div>
-				        <div class='container'><div class='cell right'>{{vProduct.sold}}</div></div>
-				        <div class='container'><div class='cell right bold'>{{vProduct.endingBalance}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>600</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>{{vProduct.beginningBalance}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>{{vProduct.newDelivery}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>100</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right'>{{vProduct.sold}}</div></div>
+				        <div class='container'><div class='cell width-45 padding-right-3 align-right bold'>{{vProduct.endingBalance}}</div></div>
 				    </div>
-				    <div class='cell icon'></div>
+				    <div class='cell width-10'></div>
 				</div>
 			</div>
 		</div>
